[gd_scene load_steps=3 format=3 uid="uid://dialogue_box_scene"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_ui.gd" id="1_dialogue_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_dialogue_ui")

[node name="DialoguePanel" type="Panel" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -220.0
offset_right = -40.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Speaker Name"

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="TrustPopup" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ChangeLabel" type="Label" parent="TrustPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
